# wisdom-hub

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: entity_benchmark.rs
docker/: Dockerfile  docker-compose.yml  prometheus.yml
docker/grafana/dashboards/: wisdom-hub.json
docker/grafana/provisioning/dashboards/: dashboard.yml
docs/: ARCHITECTURE.md  DATA-MODEL.md  DEPLOYMENT.md  VISION.md
proto/: hub.proto
src/: lib.rs  main.rs  wisdom.hub.v1.rs
src/api/: grpc.rs  health.rs  mod.rs  responses.rs  rest.rs
src/config/: mod.rs  settings.rs
src/crypto/: keys.rs  mod.rs  signing.rs
src/discovery/: client.rs  federation.rs  mod.rs  registry.rs
src/metrics/: mod.rs  prometheus.rs
src/models/: address.rs  agent.rs  error.rs  fragment.rs  mod.rs  relation.rs  tag.rs  transform.rs  trust.rs
src/resources/: disk.rs  hints.rs  mod.rs  monitor.rs
src/services/: discovery_service.rs  entity_service.rs  federated_search_service.rs  mod.rs  trust_service.rs  validity_service.rs
src/store/: entities.rs  mod.rs  rocks.rs
src/trust/: calculator.rs  mod.rs  path_finder.rs
