[package]
name = "wisdom-hub"
version = "0.1.0"
edition = "2021"
authors = ["Wisdom Network Contributors"]
description = "High-Performance Federation Hub for the Wisdom Network"
license = "MIT"

[[bin]]
name = "wisdom-hub"
path = "src/main.rs"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }

# Web Framework
actix-web = "4"
actix-rt = "2"

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"

# Database
rocksdb = "0.22"

# Crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
config = "0.14"

# Metrics
prometheus = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# System
libc = "0.2"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
parking_lot = "0.12"
once_cell = "1"

# HTTP Client (for federation)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
urlencoding = "2"
num_cpus = "1"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
actix-rt = "2"
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "entity_benchmark"
harness = false

[features]
default = []
integration = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
